--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,21 @@
-# Django==4.2.7
-# djangorestframework==3.14.0
-# django-cors-headers==4.3.1
-# djangorestframework-simplejwt==5.3.0
-# pillow==10.0.1
-# python-decouple==3.8
-# psycopg2-binary==2.9.7
-# django-filter==23.3
-# gunicorn==21.2.0
-# whitenoise==6.6.0
-# dj-database-url==2.1.0
-# django-extensions==3.2.3
-# python-dotenv==1.0.0
-
-Django==5.2.4
-djangorestframework==3.15.2
-django-cors-headers==4.4.0
-djangorestframework-simplejwt==5.3.1
-Pillow==10.3.0
+asgiref==3.9.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+dj-database-url==3.0.1
+Django==5.2.6
+django-cors-headers==4.9.0
+django-extensions==4.1
+django-filter==25.1
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+idna==3.10
+pillow==11.3.0
+psycopg2-binary==2.9.10
+PyJWT==2.10.1
 python-decouple==3.8
-psycopg2-binary==2.9.9
-django-filter==23.5
-gunicorn==21.2.0
-whitenoise==6.6.0
-dj-database-url==2.1.0
+python-dotenv==1.1.1
+requests==2.32.5
+setuptools==80.9.0
+sqlparse==0.5.3
+urllib3==2.5.0
+wheel==0.45.1
