--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ django-extensions==4.1
 django-filter==25.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 pillow==11.3.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
